TestTask1/force-app/main/default/objects/Opportunity_Notification__c/Opportunity_Notification__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Opportunity Notification</label>
</CustomObject>