TestTask1/force-app/main/default/objects/Opportunity_Notification__c/fields/Critical_Amount__c.field-meta.xml
<CustomField>
    <fullName>Critical_Amount__c</fullName>
    <description>Specify opportunity amount for managers notification</description>
    <inlineHelpText>If amount lesser than specified notifications aren&apos;t sent after opportunity update</inlineHelpText>
    <label>Critical Amount For Notification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>