TestTask1/force-app/main/default/objects/Opportunity_Notification__c/fields/Opportunity_StageName__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_StageName__c</fullName>
    <description>Specify opportunity stage name for notification</description>
    <inlineHelpText>If opportunity stage name is updated to specified value and opportunity amount equals or greater than specified in &quot;Critical Amount&quot; field managers of the user are notified</inlineHelpText>
    <label>Opportunity StageName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>