TestTask1/force-app/main/default/objects/Opportunity_Notification__c/fields/User_Role_for_email_notification__c.field-meta.xml
<CustomField>
    <fullName>User_Role_for_email_notification__c</fullName>
    <description>User Role for email notification and record sharing</description>
    <inlineHelpText>Specify User Role of the users to whom edit access to the record should be granted and email notification should be sent when opportunity amount and stage meet conditions specified above</inlineHelpText>
    <label>User Role for email notification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>